Text cycle working without jumps, inline-block fix

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -79,6 +79,8 @@ ul li:last-child
 // fade in and out
 .quotes
 	display: none
+	width: 180px
+	border-bottom: 2px solid white;
 
 .rightside
 	float: right
